# RenderKit

./: .gitignore  .markdownlint.yaml  .periphery.yml  .pre-commit-config.yaml  .swiftlint.yml  Package.resolved  Package.swift  README.md  TODO.md
.buildkite/: pipeline.yml
.github/workflows/: main.yml  swift.yml
Demo/: RenderGraphKitDemo-Info.plist  RenderGraphKitDemo.entitlements
Demo/Demo.xcodeproj/: project.pbxproj
Demo/RenderKitDemo.xcodeproj/: project.pbxproj
Demo/Scripts/: linters.sh
Demo/Shared/: App.swift  RenderModel.swift
Demo/VisionOSDemo/: VisionOSDemoApp.swift
Demo/xcconfig/: Codesigning.xcconfig  Demo-Release.xcconfig  Demo-Shared.xcconfig  Project-Debug.xcconfig  Project-Release.xcconfig  Project-Shared.xcconfig  RenderGraphKitDemo-Release.xcconfig  RenderGraphKitDemo-Shared.xcconfig  Warnings.xcconfig
Demos/CLI/: CLI.swift  OffscreenDemo.swift
Demos/Demos/: CSGDemoView.swift  ContentView-VisionOS.swift  ContentView.swift  Counters.swift  DemosApp-VisionOS.swift  DemosApp.swift  Experimental.swift  GameControllerView.swift  Info-visionOS.plist  Info.plist  MetalView2.swift  PixelFormatsView.swift  Scratch.swift  ScreenSpaceDemoView.swift  ShaderToy.metal  ShaderToyView.swift  (+3 more)
Demos/Demos.xcodeproj/: project.pbxproj
Demos/Scripts/dicom/: main.py  pyproject.toml
Documentation/: Mesh.plantuml
MyPlayground.playground/: Contents.swift  contents.xcplayground
Scripts/: swiftlint-fix.sh  swiftlint.sh
buildkite/: pipeline.yaml  pipeline.yml
docs/: NOTES.markdown  PLAN.markdown  README-Old.md  TODO.markdown  _config.yml  index.markdown
(+655 files in other folders)
