[tool.poetry]
name = "dicom"
version = "0.1.0"
description = ""
authors = ["Jonathan Wight <jwight@mac.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydicom = "^2.4.3"
matplotlib = "^3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
